--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,10 @@
           ><span class="header-studio">STUDIO</span>
         </a>
         <ul class="link">
-          <li><a href="studio.html" class="link-list">Studio</a></li>
-          <li><a href="portfolio.html" class="link-list">Portfolio</a></li>
+          <li><a href="index.html" class="link-list">Studio</a></li>
+          <li>
+            <a href="portfolio.html" class="link-list active">Portfolio</a>
+          </li>
           <li><a href="Contacts" class="link-list">Contacts</a></li>
         </ul>
       </nav>
@@ -49,36 +51,63 @@
       <section Class="Application">
         <ul class="Application_row">
           <il class="Application-list">
-            <img
-              src="./images/P_Banking_App.jpg"
-              alt="Banking App Interface"
-              width="360"
-              height="300"
-            />
+            <div class="application-image">
+              <img
+                src="./images/P_Banking_App.jpg"
+                alt="Banking App Interface"
+                width="360"
+                height="300"
+              />
+              <div class="application-image-caption">
+                <p class="image-caption">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <div class="Application_caption">
               <h3>Banking App Interface Concept</h3>
               <p>App</p>
             </div>
           </il>
           <il class="Application-list">
-            <img
-              src="./images/P_Cashless Payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
+            <div class="application-image">
+              <img
+                src="./images/P_Cashless Payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="application-image-caption">
+                <p class="image-caption">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <div class="Application_caption">
               <h3>Cashless Payment</h3>
               <p>Marketing</p>
             </div>
           </il>
           <il class="Application-list">
-            <img
-              src="./images/P_Med App.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
+            <div class="application-image">
+              <img
+                src="./images/P_Med App.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="application-image-caption">
+                <p class="image-caption">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <div class="Application_caption">
               <h3>Meditation App</h3>
               <p>App</p>
@@ -87,36 +116,63 @@
         </ul>
         <ul class="Application_row">
           <il class="Application-list">
-            <img
-              src="./images/P_Taxi Service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
+            <div class="application-image">
+              <img
+                src="./images/P_Taxi Service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="application-image-caption">
+                <p class="image-caption">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <div class="Application_caption">
               <h3>Taxi Service</h3>
               <p>Marketing</p>
             </div>
           </il>
           <il class="Application-list">
-            <img
-              src="./images/P_Screen.jpg"
-              alt="Screen Illustration"
-              width="360"
-              height="300"
-            />
+            <div class="application-image">
+              <img
+                src="./images/P_Screen.jpg"
+                alt="Screen Illustration"
+                width="360"
+                height="300"
+              />
+              <div class="application-image-caption">
+                <p class="image-caption">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <div class="Application_caption">
               <h3>Screen Illustrations</h3>
               <p>Design</p>
             </div>
           </il>
           <il class="Application-list">
-            <img
-              src="./images/P_Online_course.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
+            <div class="application-image">
+              <img
+                src="./images/P_Online_course.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="application-image-caption">
+                <p class="image-caption">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <div class="Application_caption">
               <h3>Online Courses</h3>
               <p>Marketing</p>
@@ -125,36 +181,63 @@
         </ul>
         <ul class="Application_row">
           <il class="Application-list">
-            <img
-              src="./images/P_Insta_Stories.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"
-            />
+            <div class="application-image">
+              <img
+                src="./images/P_Insta_Stories.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <div class="application-image-caption">
+                <p class="image-caption">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <div class="Application_caption">
               <h3>Instagram Stories Concept</h3>
               <p>Design</p>
             </div>
           </il>
           <il class="Application-list">
-            <img
-              src="./images/P_Organic_food.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
+            <div class="application-image">
+              <img
+                src="./images/P_Organic_food.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <div class="application-image-caption">
+                <p class="image-caption">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <div class="Application_caption">
               <h3>Organic Food</h3>
               <p>Web Site</p>
             </div>
           </il>
           <il class="Application-list">
-            <img
-              src="./images/P_Fresh_Coffee.jpg"
-              alt="Fresh Coffee"
-              width="360"
-              height="300"
-            />
+            <div class="application-image">
+              <img
+                src="./images/P_Fresh_Coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <div class="application-image-caption">
+                <p class="image-caption">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </div>
             <div class="Application_caption">
               <h3>Fresh Coffee</h3>
               <p>Web Site</p>
